# airy

./: .editorconfig  Cargo.toml  README.md  docker-compose.yaml  justfile
.github/workflows/: develop.yaml  release.yaml
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  mysql_system_prompt.txt  mysql_utility.rs  postgres_system_prompt.txt  repl.rs  utility.rs
src/tool/: mod.rs  mysql.rs  postgres.rs
tests/mysql/data/: .gitignore  load_data.sql
tests/mysql/migrations/: 0001_init.down.sql  0001_init.up.sql
tests/postgres/data/: .gitignore
tests/postgres/migrations/: 0001_init.up.sql
